Add style enforcement and precommit hook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "lib/utlis.tsz"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "lib/utlis.tsz"],
   "exclude": ["node_modules"]
 }
