--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file for Dice-mat
+# fly.toml app configuration file generated for dice-mat on 2023-12-27T15:53:09+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -16,15 +16,15 @@ primary_region = "ams"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
-
   [http_service.concurrency]
     type = "requests"
-    soft_limit = 75
     hard_limit = 100
+    soft_limit = 75
 
   [[http_service.checks]]
-    grace_period = "1s"
     interval = "30s"
-    method = "GET"
     timeout = "2s"
+    grace_period = "1s"
+    method = "GET"
     path = "/"
+
