--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
     "postcss": "^8",
+    "prettier": "^3.1.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
